example/overrides/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: sentry
  labels:
    app: sentry
spec:
  selector:
    app: sentry
  ports:
    - port: 80
      targetPort: 9000
