example/overrides/ingress-prod.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: sentry
spec:
  rules:
    - host: sentry-prod.mysite.com
      http:
        paths:
          - path: /
            backend:
              serviceName: sentry
              servicePort: 80
