example/overrides/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: sentry
spec:
  rules:
    - host: sentry.mysite.com
      http:
        paths:
          - path: /
            backend:
              serviceName: sentry
              servicePort: 80
